change images to webp

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
                 </div>
                 <h1 style="text-align: center;">Alexandru Stoica</h1>
                 <div class="avatar-container">
-                    <img src="/images/profile-pic.jpeg" alt="Alexandru Stoica" class="avatar">
+                    <img src="/images/profile-pic.webp" alt="Alexandru Stoica" class="avatar">
                 </div>
                 <p class="role">Software Engineer</p>
                 <p class="bio">Experienced in full-stack development. Proven ability in
