--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,41 +20,40 @@
                     </title>
 
                     <link rel="icon" href="/images/favico.svg" type="image/svg+xml">
-                    <link rel="stylesheet" href="/css/style.css">
-                    <link id="prism-light-theme" rel="stylesheet"
-                        href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css"
-                        referrerpolicy="no-referrer" <%=locals.currentTheme==='dark' ? 'disabled' : '' %>
-                    <%# Initially disable if dark %>
-                        />
-                        <link id="prism-dark-theme" rel="stylesheet"
-                            href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css"
-                            referrerpolicy="no-referrer" <%=locals.currentTheme==='light' ? 'disabled' : '' %>
-                        <%# Initially disable if light %>
-                            />
-                            <script>
-                                (function () {
-                                    const themeKey = 'themePreference';
-                                    const darkClassName = 'dark-mode';
-                                    let clientSideTheme;
-                                    try {
-                                        // Prioritize localStorage if it exists
-                                        clientSideTheme = localStorage.getItem(themeKey);
-                                        if (!clientSideTheme) {
-                                            // Fallback to system preference ONLY if no localStorage value
-                                            clientSideTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-                                        }
-                                    } catch (e) {
-                                        // Default to light on error
-                                        clientSideTheme = 'light';
-                                    }
-                                    // Apply dark mode class only if needed and server didn't already apply it
-                                    if (clientSideTheme === 'dark') {
-                                        document.documentElement.classList.add(darkClassName);
-                                    }
 
-                                    document.documentElement.classList.add('js-loading');
-                                })();
-                            </script>
+                    <% if (process.env.NODE_ENV === 'production') { %>
+                        <link rel="stylesheet" href="/dist/style.min.css">
+                    <% } else { %>
+                        <link rel="stylesheet" href="/css/style.css">
+                    <% } %>
+
+                    <link id="prism-light-theme" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" <%= locals.currentTheme === 'dark' ? 'disabled' : '' %> />
+                    <link id="prism-dark-theme" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css" <%= locals.currentTheme === 'light' ? 'disabled' : '' %> />
+
+                    <script>
+                        (function () {
+                            const themeKey = 'themePreference';
+                            const darkClassName = 'dark-mode';
+                            let clientSideTheme;
+                            try {
+                                // Prioritize localStorage if it exists
+                                clientSideTheme = localStorage.getItem(themeKey);
+                                if (!clientSideTheme) {
+                                    // Fallback to system preference ONLY if no localStorage value
+                                    clientSideTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+                                }
+                            } catch (e) {
+                                // Default to light on error
+                                clientSideTheme = 'light';
+                            }
+                            // Apply dark mode class only if needed and server didn't already apply it
+                            if (clientSideTheme === 'dark') {
+                                document.documentElement.classList.add(darkClassName);
+                            }
+
+                            document.documentElement.classList.add('js-loading');
+                        })();
+                    </script>
 </head>
 
 <body class="<%= locals.currentTheme === 'dark' ? 'dark-mode' : '' %>">
